uploader work - various fixes, cleanup
- gsuploader error handling improvement
- add missing end_text_attribute_format handling
- make crs page use ajax
- remove some superfluous exception handlers
- handle view steps consistently

--- a/src/GeoNodePy/geonode/templates/upload/layer_upload_csv.html
+++ b/src/GeoNodePy/geonode/templates/upload/layer_upload_csv.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load static from staticfiles %}
 
-{% block title %} {% trans "Upload Layer Step 2" %} - {{ block.super }} {% endblock %}
+{% block title %} {% trans "Upload Layer" %} - {{ block.super }} {% endblock %}
 
 {% block head %}
 {% include "geonode/ext_header.html" %}
