--- a/src/GeoNodePy/geonode/templates/upload/layer_upload_crs.html
+++ b/src/GeoNodePy/geonode/templates/upload/layer_upload_crs.html
@@ -7,9 +7,10 @@
 <div class="twocol">
   <h2> {% trans "Provide CRS for " %} "{{ layer_name }}" </h2>
 
-  <form method="POST">
+  <form method="POST" id="crsForm">
     {% csrf_token %}    
     <h3>Coordinate Reference System</h3>
+    {% if native_crs %}
     <p>A coordinate reference system for this layer could not be determined.
     Locate or enter the appropriate ESPG code for this layer below.
     One way to do this is do visit: 
@@ -24,6 +25,15 @@
         <label for="id_srs">EPSG Code (SRS)  :</label>{{ form.srs }}
     </div>
     <input type="submit" class="btn btn-primary" value="Submit">
+    {% else %}
+    <p>There is a problem recognizing the projection of this data. Please
+    reproject this data to a more common projection.</p>
+    </p>
+    {% endif %}
   </form>
+  <script type="text/javascript" src="{{ STATIC_URL }}script/upload_common.js"></script>
+  <script type="text/javascript">
+      enableUploadProgress('crsForm');
+  </script>
 </div>
 {% endblock %}
