Remove duplicate extra_script block

--- a/geonode/templates/base.html
+++ b/geonode/templates/base.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load portals %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -286,8 +287,6 @@
     });
 
     </script>
-
-    {% block extra_script %}{% endblock extra_script %}
 
     {% block extra_script %}{% endblock extra_script %}
 
