--- a/src/GeoNodePy/geonode/templates/upload/layer_upload_csv.html
+++ b/src/GeoNodePy/geonode/templates/upload/layer_upload_csv.html
@@ -16,35 +16,38 @@
 <p>Please indicate which attributes contain the latitude and longitude
 coordinates in the CSV data.</p>
 {% if guessed_lat_or_lng %}
-<p>With this data, MapStory was able to guess which attributes contain the
+<p>With this data, GeoNode was able to guess which attributes contain the
 latitude and longitude coordinates, but please confirm that the correct
 attributes are selected below.</p>
 {% endif %}
 <form method="POST" id="csvForm">
   {% csrf_token %}
+  {% if error %}
+  <div class="msg alert alert-error">{{ error }}</div>
+  {% endif %}
   <div>
     <label for="lat" style="display: inline-block; width: 75px">Latitude</label>
     <select id="lat" name="lat">
-      {% if lat_candidate %}
-      <option value="{{ lat_candidate }}">{{ lat_candidate }}</option>
-      {% else %}
       <option value="None">Select an attribute</option>
-      {% endif %}
       {% for option in point_candidates %}
-      <option value="{{ option }}">{{ option }}</option>
+      <option value="{{ option }}"
+      {% if selected_lat and selected_lat == option %}
+      selected="selected"
+      {% endif %}
+      >{{ option }}</option>
       {% endfor %}
     </select>
   </div>
   <div style="margin: 10px 0">
     <label for="lat" style="display: inline-block; width: 75px">Longitude</label>
     <select id="lng" name="lng">
-      {% if lng_candidate %}
-      <option value="{{ lng_candidate }}">{{ lng_candidate }}</option>
-      {% else %}
       <option value="None">Select an attribute</option>
-      {% endif %}
       {% for option in point_candidates %}
-      <option value="{{ option }}">{{ option }}</option>
+      <option value="{{ option }}"
+      {% if selected_lng and selected_lng == option %}
+      selected="selected"
+      {% endif %}
+      >{{ option }}</option>
       {% endfor %}
     </select>
   </div>
