--- a/src/GeoNodePy/geonode/templates/maps/layer.html
+++ b/src/GeoNodePy/geonode/templates/maps/layer.html
@@ -96,9 +96,6 @@
                 }
             });
 {% endif %}
-            var hasThumb = {% if layer.get_thumbnail %}true{% else %}false{% endif %};
-            var thumbURL = "{% url layer_thumbnail layer.typename %}";
-            {% include "maps/thumbnail_help.js" %}
         });
 
         function showStyle(styleName) {
@@ -115,8 +112,14 @@
             }
             app.tools["styler"].actions[0].execute();
         }
+        var hasThumb = {% if layer.get_thumbnail %}true{% else %}false{% endif %};
+        var thumbURL = "{% url layer_thumbnail layer.typename %}";
 {% endautoescape %}
     </script>
+{% if can_change_permissions %}
+<script type="text/javascript" src="{{ STATIC_URL }}script/thumbnail_help.js"></script>
+<% endif %}
+    <script>
 {% phileo_js %}
 {% endblock %}
 
