Change upload url

--- a/geonode/layers/templates/layers/layer_base.html
+++ b/geonode/layers/templates/layers/layer_base.html
@@ -11,7 +11,7 @@
   <ul class="nav nav-tabs" id="subnav-tabs">
         <li><a href="{% url "layer_browse" %}" class="explore">Explore Layers</a></li>
         <li><a href="{% url "layer_search_page" %}" class="search">Search Layers</a></li>
-        <li><a href="{% url "layer_upload" %}" class="upload">Upload Layers</a></li>
+        <li><a href="{% url "data_upload" %}" class="upload">Upload Layers</a></li>
   </ul>
   {% block body %}{% endblock body %}
 {% endblock %}
