--- a/geonode/templates/base.html
+++ b/geonode/templates/base.html
@@ -117,8 +117,14 @@
                   <li id="nav_maps">
                     <a href="{% url maps_browse %}">{% trans "Maps" %}</a>
                   </li>
+                  <li id="portals">
+                    <a href="{% url portals_list %}">{% trans "Portals" %}</a>
+                  </li>
                   <li id="nav_profiles">
                     <a href="{% url profile_list_all %}">{% trans "Profiles" %}</a>
+                  </li>
+                  <li id="groups">
+                    <a href="{% url group_list %}">{% trans "Groups" %}</a>
                   </li>
                   <li id="nav_search">
                     <a href="{% url advanced_search %}">{% trans "Search" %}</a>
