Change block body_class in upload base

--- a/geonode/upload/templates/upload/base.html
+++ b/geonode/upload/templates/upload/base.html
@@ -13,7 +13,7 @@
     <!-- Shim to make HTML5 elements usable in older Internet Explorer versions -->
     <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 {% endblock extra_script %}
-{% block body_class %}upload {% block body_class_extra %}{% endblock %}{% endblock %}
+{% block body_class %}data {% block body_class_extra %}{% endblock %}{% endblock %}
 {% block body_outer %}
     <div class="span12 main-content">
         <h2 class="page-title">{% trans "Upload Data" %}</h2>
