--- a/geonode/static/css/site.css
+++ b/geonode/static/css/site.css
@@ -1,6 +1,34 @@
 /*-----------------------
 Boilerplate overrides
 -----------------------*/
+body {
+    padding-top: 80px; /* 60px to make the container go all the way to the bottom of the topbar */
+}
+
+footer {
+    margin-top: 30px;
+    padding-top: 10px;
+    border-top: 1px solid #eee;
+}
+
+.nav-logo {
+    float: left;
+    width: 158px;
+    height: 50px;
+    background: url(../img/logo-bg.png) no-repeat;
+    overflow: hidden;
+    text-indent: -9999em;
+}
+
+.brand {
+    overflow: hidden;
+    text-indent: -9999em;
+}
+
+.navbar .nav > li > a {
+    padding: 15px 10px 16px;
+}
+
 table.x-btn td,
 .x-panel td,
 .x-toolbar-ct td {
