--- a/geonode/templates/base.html
+++ b/geonode/templates/base.html
@@ -5,43 +5,17 @@
     <meta charset="utf-8">
     <title>{% block title %}{{ SITENAME }}{% endblock %}</title>
     {% block head %}
-      <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" rel="stylesheet">
-      <style>
-        body {
-          padding-top: 80px; /* 60px to make the container go all the way to the bottom of the topbar */
-        }
-        footer {
-          margin-top: 30px;
-          padding-top: 10px;
-          border-top: 1px solid #eee;
-        }
-        .nav-logo {
-          float: left;
-          width: 158px;
-          height: 50px;
-          background: url({{ STATIC_URL }}theme/img/logo-bg.png) no-repeat;
-          overflow: hidden;
-          text-indent: -9999em;
-        }
-        .brand {
-          overflow: hidden;
-          text-indent: -9999em;
-        }
-        .navbar .nav > li > a {
-          padding: 15px 10px 16px;
-        }
-
-      </style>
-      <link href="{{ STATIC_URL }}theme/site.css" rel="stylesheet">
-      <link href="{{ STATIC_URL }}geonode/css/ext-compatibility.css" rel="stylesheet">
-      <link href="{{ STATIC_URL }}geonode/css/datatables.css" rel="stylesheet">
-      <link href="{{ STATIC_URL }}select2/select2.css" rel="stylesheet"/>
+      <link href="{{ STATIC_URL }}libs/bootstrap/css/bootstrap.css" rel="stylesheet">
+      <link href="{{ STATIC_URL }}libs/select2/select2.css" rel="stylesheet"/>
+      <link href="{{ STATIC_URL }}css/site.css" rel="stylesheet">
+      <link href="{{ STATIC_URL }}css/ext-compatibility.css" rel="stylesheet">
+      <link href="{{ STATIC_URL }}css/datatables.css" rel="stylesheet">
     {% endblock %}
-
 
     <!--[if lt IE 9]>
       <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+
     {% block extra_head %}{% endblock extra_head %}
   </head>
   <body class="{% block body_class %}{% endblock %}">
@@ -145,15 +119,15 @@
       </footer>
     </div>
 
-    <script src="{{ STATIC_URL }}jquery-1.8.0.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js"></script>
-    <script src="{{ STATIC_URL }}datatables/js/jquery.dataTables.min.js"></script>
-    <script src="{{ STATIC_URL }}geonode/js/hogan.js"></script>
-    <script src="{{ STATIC_URL }}geonode/js/jquery.timeago.js"></script>
-    <script src="{{ STATIC_URL }}geonode/js/json2.js"></script>
-    <script src="{{ STATIC_URL }}geonode/js/utils.js"></script>
-    <script src="{{ STATIC_URL }}select2/select2.js"></script>
+    <script src="{{ STATIC_URL }}libs/jquery-1.8.0.js"></script>
+    <script src="{{ STATIC_URL }}libs/bootstrap/js/bootstrap.min.js"></script>
+    <script src="{{ STATIC_URL }}libs/datatables/js/jquery.dataTables.min.js"></script>
+    <script src="{{ STATIC_URL }}libs/hogan.js"></script>
+    <script src="{{ STATIC_URL }}libs/jquery.timeago.js"></script>
+    <script src="{{ STATIC_URL }}libs/json2.js"></script>
+    <script src="{{ STATIC_URL }}libs/select2/select2.js"></script>
 
+    <script src="{{ STATIC_URL }}js/utils.js"></script>
     {% block extra_script %}{% endblock extra_script %}
     <script type="text/javascript">
 
