--- a/geonode/templates/upload/status.html
+++ b/geonode/templates/upload/status.html
@@ -47,8 +47,8 @@
 
 {% block footer-extend %}
 
-<script src="{{ STATIC_URL }}underscore-min.js"></script>
-<script src="{{ STATIC_URL }}script/status.js"></script>
+<script src="{{ STATIC_URL }}libs/underscore-min.js"></script>
+<script src="{{ STATIC_URL }}js/status.js"></script>
 
 <script type="text/javascript">
 {% autoescape off %}
