--- a/geonode/templates/upload/layer_upload.html
+++ b/geonode/templates/upload/layer_upload.html
@@ -84,25 +84,6 @@
 
 {% block footer-extend %}
 
-<script data-main="{{ STATIC_URL}}js/upload" src="{{ STATIC_URL}}libs/require-jquery.js"></script>
-
-<script type="text/javascript">
-{% autoescape off %}
-
-// $(function() { 
-
-//   UPLOAD.initialize({
-//      csrf_token : "{{ csrf_token }}",
-//      form_target : "{% url data_upload %}",
-//      user_lookup : "{% url geonode.views.ajax_lookup %}",
-//      upload_button: "#upload-button",
-//      file_queue: "#file-queue",
-//      form: "#file-uploader"
-//   });
-
-// });
-
-{% endautoescape %}
-</script>
+<script data-main="{{ STATIC_URL}}js/upload/main" src="{{ STATIC_URL}}libs/require-jquery.js"></script>
 
 {% endblock %}
