--- a/geonode/templates/base.html
+++ b/geonode/templates/base.html
@@ -131,52 +131,52 @@
     {% block extra_script %}{% endblock extra_script %}
     <script type="text/javascript">
 
-    $(function() {
-      $("input.user-select").select2({
-        placeholder: {title: '{% trans "Add User..." %}', id: ""},
-        minimumInputLength: 1,
-        multiple: true,
-        ajax: {
-          url: "{% url auth_ajax_lookup %}",
-          dataType: "json",
-          type: "POST",
-          data: function (term, page) {
-            return {
-              query: term,
-            };
-          },
-          results: function (data, page) {
-            return {results: data.users};
-          }
-        },
-        id: userID,
-        formatResult: userFormatResult,
-        formatSelection: userFormatSelection
-      });
+    // $(function() {
+    //   $("input.user-select").select2({
+    //     placeholder: {title: '{% trans "Add User..." %}', id: ""},
+    //     minimumInputLength: 1,
+    //     multiple: true,
+    //     ajax: {
+    //       url: "{% url auth_ajax_lookup %}",
+    //       dataType: "json",
+    //       type: "POST",
+    //       data: function (term, page) {
+    //         return {
+    //           query: term,
+    //         };
+    //       },
+    //       results: function (data, page) {
+    //         return {results: data.users};
+    //       }
+    //     },
+    //     id: userID,
+    //     formatResult: userFormatResult,
+    //     formatSelection: userFormatSelection
+    //   });
 
-      function userID(user) {
-        return user.username
-      }
+    //   function userID(user) {
+    //     return user.username
+    //   }
 
-      function userFormatResult(user) {
-        return user.username
-      }
+    //   function userFormatResult(user) {
+    //     return user.username
+    //   }
 
-      function userFormatSelection(user) {
-          return user.username;
-      }
+    //   function userFormatSelection(user) {
+    //       return user.username;
+    //   }
 
-      var toggle_buttons = function() {
-        if ($("input.asset-selector:checked").length) {
-          $(".asset-modifier").removeClass("disabled");
-        } else {
-          $(".asset-modifier").addClass("disabled");
-        }
-      };
+    //   var toggle_buttons = function() {
+    //     if ($("input.asset-selector:checked").length) {
+    //       $(".asset-modifier").removeClass("disabled");
+    //     } else {
+    //       $(".asset-modifier").addClass("disabled");
+    //     }
+    //   };
 
-      $("input.asset-selector").live("change", toggle_buttons);
-      toggle_buttons();
-    });
+    //   $("input.asset-selector").live("change", toggle_buttons);
+    //   toggle_buttons();
+    // });
 
     </script>
 
