--- a/geonode/templates/upload/layer_upload.html
+++ b/geonode/templates/upload/layer_upload.html
@@ -11,10 +11,10 @@
 
 {% block main %}
 <div class="twocol">
-    <h2>{% trans "Add data" %}</h2>
-    
-    <a href="{% url data_upload_status %}">Go to your past uploads</a>
-
+  
+  <div class="section">
+    <h2>{% trans "SELECT LAYER FILES" %}</h2>
+  </div>
     {% if incomplete %}
     
     <h3>Incomplete Uploads</h3>
@@ -42,13 +42,15 @@
 {% if enough_storage %}
   <!-- Start of uploader form -->
 
-  <div id="drop-zone"></div>
+  <div id="drop-zone">
+    <h3>Drag and Drop files here</h3>
+  </div>
 
   <form id="file-uploader" method="post" enctype="multipart/form-data">
     <input class="btn" id="file-input" type="file" multiple>
   </form>
 
-  <div>
+  <div class="section">
     <ul id="global-errors"></ul>
     <h2>{% trans "Files to be uploaded" %}</h2>
     <div id="file-queue">
@@ -66,7 +68,9 @@
 {% block sidebar %}
 <div class="threecol">    
 {% if enough_storage %}
-<div>
+
+<a href="{% url data_upload_status %}">Go to your past uploads</a>
+<div id="supported-files">
   <h3>Supported Files</h3>
   <p><strong>ZIP:</strong> vector or raster layers</p>
   <p><strong>Vector layers:</strong>SHP, DBF, SHX are required. PRJ
@@ -75,6 +79,7 @@
   files should be included if the original layer data included
   them</p>
 </div>
+
 <div id="permissions_form"></div>
 </div>
 {% endif %}
