--- a/geonode/maps/templates/maps/mapinfo.html
+++ b/geonode/maps/templates/maps/mapinfo.html
@@ -31,16 +31,7 @@
   </script>
 {% endblock %}
 
-{% block start_body_js %}
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) {return;}
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-{% endblock %}
+{% include "facebook_sdk.html" %}
 
 {% block main %}
   {% overall_rating map "map" as map_rating %}
@@ -48,7 +39,7 @@
   <div class="overall_rating" data-rating="{{ map_rating }}"></div>
   <g:plusone size="small" href="http://{{ request.get_host }}{{ request.get_full_path }}"></g:plusone>
   <div class="fb-like" data-href="http://{{ request.get_host }}{{ request.get_full_path }}" data-send="false" data-width="50" data-layout="button_count" data-show-faces="false"></div>
-	  
+
   <p><strong>{% trans "Abstract:" %}</strong> {{ map.abstract }}</p>
   <p><strong>{% trans "Keywords:" %}</strong> {{map.keywords.all|join:", "}}
 
@@ -104,14 +95,14 @@
   <ul class="nav nav-list">
     <li class="nav-header">{% trans "Download" %}</li>
     <li><a href="{% url map_download map.id %}">{% trans "Download all layers included in this map" %}</a></li>
-    
+
     <li class="nav-header">{% trans "Layers" %}</li>
     {% for layer in layers %}
       {% if not layer.group == "background" %}
         <li>{% autoescape off %}{{layer.local_link}}{% endautoescape %}</li>
       {% endif %}
     {% endfor %}
-    
+
     <li class="nav-header">{% trans "Manage" %}</li>
     {% has_obj_perm user map "maps.change_map" as can_change %}
     {% has_obj_perm user map "maps.delete_map" as can_delete %}
