--- a/geonode/upload/templates/upload/layer_upload_crs.html
+++ b/geonode/upload/templates/upload/layer_upload_crs.html
@@ -1,4 +1,4 @@
-{% extends "no_bottom_layout.html" %}
+{% extends "base.html" %}
 {% load i18n %}
 
 {% block title %} {% trans "Upload Layer" %} - {{ block.super }} {% endblock %}
