profile template addition + cleanup
remove superfluous 'edit profile' link
add block in its place

--- a/src/GeoNodePy/geonode/templates/profiles/profile_detail.html
+++ b/src/GeoNodePy/geonode/templates/profiles/profile_detail.html
@@ -20,9 +20,7 @@
     <li><a href="{% url maps_new %}">{% trans "Create a new map" %}</a></li>
   </ul>
   <h3>{% trans "Settings" %}</h3>
-  <ul>
-    <li><a href="{% url profiles_edit_profile %}">{% trans "Edit profile information" %}</a></li>
-  </ul>
+  {% block settings %}{% endblock %}
   {% endif %}
 </div>
 {% endblock %}
