profile page - ensure 'None' does not appear

--- a/src/GeoNodePy/geonode/templates/profiles/profile_detail.html
+++ b/src/GeoNodePy/geonode/templates/profiles/profile_detail.html
@@ -9,7 +9,7 @@
 <div class="threecol">
   {% block profile_messages %}{% endblock %}
   <div style="float: right">{% avatar profile.user 70 %}</div>
-  <h2>{{ profile.name }}</h2>
+  <h2>{{ profile.name|default:profile.user.username }}</h2>
   {% if user == profile.user %}
   <h3>{% trans "Actions" %}</h3>
   <ul>
