trying out @ahocevar's solution for https://github.com/opengeo/mapstory/issues/511

--- a/src/geonode-client/app/static/theme/app/geoexplorer.css
+++ b/src/geonode-client/app/static/theme/app/geoexplorer.css
@@ -1,3 +1,7 @@
+.mapstory-grid-cls {
+    opacity: 0 !important;
+    filter: alpha(opacity=0) !important;
+}
 .gxp-annotations-tip {
     z-index: 9011;
 }
