add another css rule as suggested by @ahocevar in https://github.com/opengeo/geonode/commit/f89a5cf1c3856be618fa141df82d0c0cbea0ff92#commitcomment-2613066

--- a/src/geonode-client/app/static/theme/app/geoexplorer.css
+++ b/src/geonode-client/app/static/theme/app/geoexplorer.css
@@ -4,6 +4,9 @@
 .fade-all .olBackBuffer .olTileImage {
     display: inherit !important;
 }
+.fade-all img.olTileImage.olTileReplacing {
+    display: inherit;
+}
 .gxp-annotations-tip {
     z-index: 9011;
 }
