and now for the right css class that finally works, thanks to @ahocevar

--- a/src/geonode-client/app/static/theme/app/geoexplorer.css
+++ b/src/geonode-client/app/static/theme/app/geoexplorer.css
@@ -4,8 +4,8 @@
 .fade-all .olBackBuffer .olTileImage {
     display: inherit !important;
 }
-.fade-all img.olTileImage.olTileReplacing {
-    display: inherit;
+img.olTileImage.olTileReplacing {
+    display: inherit !important;
 }
 .gxp-annotations-tip {
     z-index: 9011;
